src/objects/Initiative__c.object
<CustomObject>
    <fields>
        <fullName>Age_days__c</fullName>
        <description>Time in days since the Initiative has been created.</description>
        <formula>NOW()- CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time in days since the Initiative has been created.</inlineHelpText>
        <label>Age (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Initiatives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Corporate Operations</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Facilities</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Information Systems</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Tech Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Plan</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>District</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>District__c.Business_Unit__r.Name</field>
                <operation>equals</operation>
                <value>Geo-Coding</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>Initiatives</relationshipLabel>
        <relationshipName>Initiatives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exec_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exec Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Initiatives1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initiative_ID__c</fullName>
        <displayFormat>I-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>Initiative ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Next_Milestone__c</fullName>
        <label>Next Milestone</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Overdue__c</fullName>
        <formula>AND(
       NOT(ISPICKVAL( Status__c , &quot;I0 - Discarded&quot;)),
       NOT(ISPICKVAL( Status__c , &quot;I6 - Complete&quot;))
       ,
    OR(
       ISBLANK( Due_Date__c ),
       TODAY()&gt; Due_Date__c
       )
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P1 - Critical</fullName>
                </value>
                <value>
                    <fullName>P2 - High</fullName>
                </value>
                <value>
                    <fullName>P3 - Moderate</fullName>
                </value>
                <value>
                    <fullName>P4 - Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BP</fullName>
                </value>
                <value>
                    <fullName>CE</fullName>
                </value>
                <value>
                    <fullName>CL</fullName>
                </value>
                <value>
                    <fullName>CM</fullName>
                </value>
                <value>
                    <fullName>CN</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DM</fullName>
                </value>
                <value>
                    <fullName>EC</fullName>
                </value>
                <value>
                    <fullName>ED</fullName>
                </value>
                <value>
                    <fullName>EM</fullName>
                </value>
                <value>
                    <fullName>EP</fullName>
                </value>
                <value>
                    <fullName>FA</fullName>
                </value>
                <value>
                    <fullName>FC</fullName>
                </value>
                <value>
                    <fullName>FF</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>FO</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GD</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IO</fullName>
                </value>
                <value>
                    <fullName>IS</fullName>
                </value>
                <value>
                    <fullName>LC</fullName>
                </value>
                <value>
                    <fullName>MC</fullName>
                </value>
                <value>
                    <fullName>MK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <label>Progress</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>25%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>75%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Projected_Completion__c</fullName>
        <label>Projected Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <label>Requestor</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I0 - Discarded</fullName>
                </value>
                <value>
                    <fullName>I1 - Logged Proposal</fullName>
                </value>
                <value>
                    <fullName>I2 - Accepted/Endorsed</fullName>
                </value>
                <value>
                    <fullName>I3 - Dialog/Alignment</fullName>
                </value>
                <value>
                    <fullName>I4 - Plan/Assignment</fullName>
                </value>
                <value>
                    <fullName>I5 - In Progress</fullName>
                </value>
                <value>
                    <fullName>I6 - Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Initiative</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Requestor__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Progress__c</columns>
        <columns>Next_Milestone__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Projected_Completion__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Exec_Owner__c</columns>
        <columns>Process__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>I1,I2,I3,I4,I5,I0 - Discarded,I1 - Logged Proposal,I2 - Accepted/Endorsed,I1 -</value>
        </filters>
        <label>Currently Open Initiatives</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Assigned</fullName>
        <columns>Requestor__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Progress__c</columns>
        <columns>Next_Milestone__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Projected_Completion__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Exec_Owner__c</columns>
        <columns>Process__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>I1 - Logged Proposal,I2 - Accepted/Endorsed,I3 - Dialog/Alignment,I4 - Plan/A</value>
        </filters>
        <label>My Open Assigned Initiatives</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Initiative Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Initiatives</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>